k8s/browserless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: browserless
  namespace: browser-streamer
spec:
  type: NodePort
  selector:
    app: browserless
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
