k8s/session-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: session-manager
  namespace: browser-streamer
spec:
  type: NodePort
  selector:
    app: session-manager
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
